--- a/flasktrivia/templates/trivia.html
+++ b/flasktrivia/templates/trivia.html
@@ -1,7 +1,9 @@
+#!/usr/bin/env html
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask - WTF - Quiz</title>
+    <title>Flask Trivia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
@@ -29,5 +31,4 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
-</html>                                                                                                           
-~        
+</html>
